# hikayeapp-backend

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main_hikayeapp-backend.yml  main_rdazureopenaiweb.yml
hikayeapp_backend/: config.py  database.py  main.py
hikayeapp_backend/api/v1/: routes_auth.py  routes_users.py
hikayeapp_backend/core/: openai.py
hikayeapp_backend/core/middleware/: exception_middleware.py  logging_middleware.py
hikayeapp_backend/core/routes/: child.py  story.py
hikayeapp_backend/models/: child.py  story.py  user.py
hikayeapp_backend/schemas/: child.py  story.py  user.py
hikayeapp_backend/services/: auth_service.py  child_service.py  story_service.py
hikayeapp_backend/utils/: logger.py
